--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
   },
   "license": "MIT",
   "dependencies": {
-    "sppull": "^2.6.7",
-    "chokidar": "latest"
+    "chalk": "^4.1.0",
+    "sppull": "^2.6.7"
+  },
+  "devDependencies": {
+    "@types/chalk": "^2.2.0",
+    "@types/node": "^14.14.22"
   }
 }
